# Lapis

./: .gitmodules  CMakeLists.txt
Examples/: CMakeLists.txt
Examples/lapis_01_hello_triangle/: CMakeLists.txt  lapis_01_hello_tringle.c
Include/Lapis/: Lapis.h
Include/lapis/: lapis.h  lapis_alloc.h  lapis_core.h  lapis_gfx.h  lapis_ui.h  lapis_window.h
Source/alloc/: CMakeLists.txt
Source/alloc/common/: CMakeLists.txt  common_alloc.c  common_alloc.h
Source/alloc/glsl/: CMakeLists.txt  glsl_alloc.c
Source/alloc/wii/: CMakeLists.txt
Source/cmake/: REAME.md  meso_backend_selector.cmake  meso_cross_platform_executable.cmake
Source/core/glsl/: CMakeLists.txt  glsl_core_context.c  glsl_core_init.c
Source/core/wii/: CMakeLists.txt  wii_core.h  wii_core_context.c  wii_core_init.c
Source/gfx/glsl/: CMakeLists.txt  glsl_gfx.h  glsl_gfx_immediate.c  glsl_gfx_init.c  glsl_gfx_target.c
Source/gfx/wii/: CMakeLists.txt  wii_gfx_immediate.c  wii_gfx_init.c  wii_gfx_target.c
Source/ui/: CMakeLists.txt
Source/utils/: CMakeLists.txt
Source/window/: CMakeLists.txt
Source/window/wii/: CMakeLists.txt  wii_window_event.c  wii_window_init.c
Source/window/win32/: CMakeLists.txt  win32_window.h  win32_window_event.c  win32_window_init.c
